# fullienerWearMS

./: README.md  docker-compose.yml  nginx.conf
auth-service/: Dockerfile  pyproject.toml
auth-service/app/: base.py  database.db  main.py  models.py  schemas.py  security.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/api/repositories/: auth.repository.ts  good.repository.ts
frontend/assets/css/: input.css
frontend/components/: footer.vue  header.vue
frontend/pages/: contacts.vue  index.vue  login.vue  register.vue
frontend/pages/catalog/: [id].vue  index.vue
good-service/: database.db  pyproject.toml
good-service/app/: database.db  main.py  models.py  schemas.py
