[tool.poetry]
name = "fw-good-service"
version = "0.1.0"
description = "FullienerWear Good Service"
authors = ["Ruslan Akperov <ruslanakperov80857@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
